--- a/ProfSite/Views/Bravecto/index.cshtml
+++ b/ProfSite/Views/Bravecto/index.cshtml
@@ -111,15 +111,15 @@
     <div id="home">
         <div class="jumbotron">
             <div class="container">
-                <div class="jumbo-home-overlay">
+                <div class="jumbo-home-overlay clock-outer-container">
                     <div class="row top-jumbo-overlay">
-                        <div class="col-md-3 col-xs-3">
+                        <div class="col-md-3 col-xs-3 clock-wrapper">
                             <div id="tweleveweeks_container">
                                 <ul style="list-style:none;"></ul>
                             </div>
                             <h3 class="weeks">WEEKS</h3>
                         </div>
-                        <div class="col-md-9 col-xs-9">
+                        <div class="col-md-10 col-xs-10">
                             <h1>Extend a game plan for longer-lasting protection.</h1>
                         </div>
                     </div>
@@ -189,8 +189,8 @@
                 </p>
                 <div class="row">
                     <div class="col-sm-3 col-sm-offset-3">
-                        <a class="btn btn-default" href="#" role="button">
-                            REGISTER NOW
+                        <a class="btn btn-default login-link" href="#" role="button">
+                            LOG IN NOW
                             <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                         </a>
                     </div>
@@ -203,9 +203,9 @@
                 </div>
             </div>
         </div>
+        <div class="video-wrapper"></div>
     </div>
     <div id="support">
-        <div class="video-wrapper"></div>
         <div class="static-section support">
             <div class="container">
                 <div class="static-overlay bgblue">
@@ -213,8 +213,7 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div id="innovation">
+
         <div class="container static-body">
             <h2 class="blue">IMPROVE COMMUNICATION WITH EXISTING CUSTOMERS AND ENGAGE NEW CUSTOMERS.</h2>
             <p>
@@ -234,6 +233,8 @@
                 </a> to get started.
             </p>
         </div>
+    </div>
+    <div id="innovation">
         <div class="static-section innovation">
             <div class="container">
                 <div class="static-overlay bgpurple">
@@ -289,6 +290,9 @@
         </div>
     </div>
     <div class="container">
+        <div class="row">
+            <hr>
+        </div>
         <div class="row">
             <p>
                 <sup>*</sup> BRAVECTO is effective against Rhipicephalus sanguineus (brown dog tick) for 8 weeks after dosing. The most common adverse reactions were mild and short-lived vomiting, decreased appetite, diarrhea and drooling. For complete safety information, refer to product label.
