--- a/ProfSite/Views/BravoVets/resources.cshtml
+++ b/ProfSite/Views/BravoVets/resources.cshtml
@@ -52,7 +52,7 @@
                             <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                         </a>
                         <br />
-                        <a href="#" class="share share-this">
+                        <a href="#" class="share share-this" data-link="~/Content/img/Bravecto_Support_rolethumbnail.jpg">
                             Share this
                             <i class="icon icon-share"></i>
                         </a>
@@ -235,10 +235,10 @@
                 itemClass: 'li.resource-item',
                 getUrl: "/GetBravovetsResources",
                 afterAppend: function () {
-                    console.log('here');
                     $(".resources-container").find(".share").socialPostDialog({ "dialogType": "resources", "fileupload": false });
                 }
             });
+            $(".resources-body").find(".share").socialPostDialog({ "dialogType": "resources", "fileupload": false });
         });
     </script>
 }
