adherence copy fix

--- a/ProfSite/Views/BravoVets/adherence.cshtml
+++ b/ProfSite/Views/BravoVets/adherence.cshtml
@@ -81,7 +81,7 @@
 </div>
 <div class="container static-body support-body">
     <div class="static-overlay bggreen">
-        <h2>THE NEW AND BETTER WAY TO DRIVE OUT FLEA INFESTATIONS.</h2>
+        <h2>DRIVE OUT FLEA INFESTATIONS IN ONE CHEW.</h2>
         <p>
             When pet owners are dealing with a flea infestation, it can be around 3 months of itchy bites and obsessive cleaning. Monthly treatments add to pet owners’ stress by requiring them to reapply the treatment every 28 days for at least 3 months to ensure continuous protection as the fleas are driven out.3 And, if they accidentally forget? Months and months of pests in their home and on their dog, leading to an unhappy pet owner.
         </p>
